# zero2prod

./: Cargo.toml
.github/workflows/: general.yaml
migrations/: 20230321121016_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
