[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
reqwest = "0.11.14"
serde = { version = "1.0.156", features = ["derive"]}
tokio = "1.26.0"
config = "0.13.3"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
         "runtime-actix-rustls",
         "macros",
         "postgres",
         "uuid",
         "chrono",
         "migrate",
]

[dev-dependencies]
actix-rt = "2.8.0"
