[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
reqwest = "0.11.14"
serde = { version = "1.0.156", features = ["derive"]}
tokio = "1.26.0"
config = "0.13.3"
chrono = "0.4.24"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
         "runtime-actix-rustls",
         "macros",
         "postgres",
         "uuid",
         "chrono",
         "migrate",
]

[dev-dependencies]
actix-rt = "2.8.0"
